Added basic UI's and added a To DO list

--- a/backend/src/main/resources/static/staffdashboard.html
+++ b/backend/src/main/resources/static/staffdashboard.html
@@ -43,6 +43,13 @@
       </details>
 
       <button type="button" id="create">Create Session</button>
+
+      <button onclick="document.location='index.html'"> Return to Home Page</button>
+
+
+      
+      
+
     </form>
     <div id="link" class="output"></div>
   </section>
@@ -98,10 +105,7 @@
     </table>
   </section>
 
-  <footer>
-    <p>&copy; 2025 Attendance Tracker - Group N</p>
-    <p><a href="staffportal.html">Go to Staff Summary View</a></p>
-  </footer>
+
 
   <script src="scripts/indexscript.js"></script>
 </body>
