--- a/backend/src/main/resources/static/staffportal.html
+++ b/backend/src/main/resources/static/staffportal.html
@@ -42,6 +42,10 @@
 
   <footer>
     <p>&copy; 2025 Attendance Tracker - Group N</p>
+
+  
+    <button onclick="document.location='index.html'"> Return to Home Page</button>
+
   </footer>
 
   <script src="scripts/indexscript.js"></script>
