--- a/backend/src/main/resources/static/studentcheckin.html
+++ b/backend/src/main/resources/static/studentcheckin.html
@@ -28,6 +28,9 @@
 
   <footer>
     <p>&copy; 2025 Attendance Tracker - Group N</p>
+    
+    <button onclick="document.location='index.html'"> Return to Home Page</button>
+
   </footer>
 
   <script src="scripts/studentscript.js"></script>
