--- a/backend/src/main/resources/static/staffportal.html
+++ b/backend/src/main/resources/static/staffportal.html
@@ -3,51 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Staff Summary – Attendance Report</title>
+  <title>Staff Portal – Create Session</title>
   <link rel="stylesheet" href="staffportal.css" />
 </head>
+
 <body>
   <header>
-    <h1>Attendance Report</h1>
-    <p>Review attendance, check location flags, and export records</p>
+    <h1>Create Attendance Session</h1>
+    <p>Staff can start a new attendance session here.</p>
   </header>
 
   <section>
-    <div class="report-controls">
-      <button id="refresh" disabled>Refresh Report</button>
-      <a id="export" href="#" download>Download CSV</a>
-    </div>
+    <form id="sessionForm">
+      <h2>Session Details</h2>
 
-    <table id="tbl">
-      <thead>
-        <tr>
-          <th>User</th>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Time</th>
-          <th>Lat</th>
-          <th>Lng</th>
-          <th>Acc (m)</th>
-          <th>IP (/24 or /64)</th>
-          <th>Device Hash</th>
-          <th>Late</th>
-          <th>Geo</th>
-          <th>LowAcc</th>
-          <th>Note</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+      <label for="courseCode">Course Code:</label>
+      <input id="courseCode" type="text" placeholder="e.g., COMPX374" required />
+
+      <label for="ownerEmail">Staff Email:</label>
+      <input id="ownerEmail" type="email" placeholder="name@waikato.ac.nz" required />
+
+      <label for="startTime">Start Time:</label>
+      <input id="startTime" type="datetime-local" required />
+
+      <label for="endTime">End Time:</label>
+      <input id="endTime" type="datetime-local" required />
+
+      <button type="submit">Create Session</button>
+    </form>
+
+    <h3>API Response</h3>
+    <pre id="output">Waiting for submission...</pre>
+
+    <div id="studentLink" style="text-align:center; margin-top:20px;"></div>
   </section>
 
   <footer>
     <p>&copy; 2025 Attendance Tracker - Group N</p>
-
-  
-    <button onclick="document.location='index.html'"> Return to Home Page</button>
-
+    <button onclick="document.location='index.html'">Return to Home Page</button>
   </footer>
 
-  <script src="scripts/indexscript.js"></script>
+  <!-- ✅ Corrected Script Name -->
+  <script src="scripts/staffscript.js"></script>
 </body>
 </html>
