edit the code and tidy up the code

--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -12,23 +12,23 @@
       margin: 0;
       padding: 0;
       text-align: center;
-      color: #000000; /* Brand black */
+      color: #000000; 
     }
 
     header {
-  background: #DA291C; /* Brand Red */
+  background: #DA291C; 
   color: #FFFFFF;
   padding: 20px;
   text-align: center;
   position: relative;
 }
 
-header img { /* waikato uni logo */
+header img { 
   position: absolute;
-  left: 20px;   /* Distance from left edge */
-  top: 15px;    /* Distance from top */
-  height: 100px; /* Increased from 60px */
-  width: auto;  /* Keeps proper proportions */
+  left: 20px;   
+  top: 15px;    
+  height: 100px; 
+  width: auto;  
 }
 
 
@@ -38,7 +38,7 @@ header img { /* waikato uni logo */
 
     header p {
       margin-top: 5px;
-      color: #FFF6E0; /* Soft light-yellow accent */
+      color: #FFF6E0; 
     }
 
     /* ===== Layout ===== */
@@ -55,7 +55,7 @@ header img { /* waikato uni logo */
       width: 250px;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
-      border-top: 5px solid #FFA300; /* Yellow accent */
+      border-top: 5px solid #FFA300; 
     }
 
     .card:hover {
@@ -64,7 +64,7 @@ header img { /* waikato uni logo */
     }
 
     .card h2 {
-      color: #DA291C; /* Brand Red titles */
+      color: #DA291C; 
     }
 
     .card p {
@@ -74,7 +74,7 @@ header img { /* waikato uni logo */
     /* ===== Links ===== */
     a {
       text-decoration: none;
-      color: #FFA300; /* Brand Yellow link */
+      color: #FFA300; 
       font-weight: bold;
       display: block;
       margin-top: 10px;
@@ -82,14 +82,14 @@ header img { /* waikato uni logo */
     }
 
     a:hover {
-      color: #DA291C; /* Brand Red on hover */
+      color: #DA291C; 
     }
 
     /* ===== Footer ===== */
     footer {
       margin-top: 50px;
       padding: 10px;
-      background: #DA291C; /* Brand Red */
+      background: #DA291C;
       color: #FFFFFF;
     }
   </style>
@@ -105,19 +105,19 @@ header img { /* waikato uni logo */
 
   <div class="container">
     <div class="card">
-      <h2>📋 Staff Dashboard</h2>
+      <h2> Staff Dashboard</h2>
       <p>Create sessions, upload rosters, and manage attendance.</p>
       <a href="staffdashboard.html">Go to Staff Dashboard →</a>
     </div>
 
     <div class="card">
-      <h2>🧑‍🎓 Student Check-in</h2>
-      <p>Students can check into their class sessions securely.</p>
+      <h2> Student Check-in</h2>
+      <p> Students can check into their class sessions securely.</p>
       <a href="studentcheckin.html">Go to Student Check-in →</a>
     </div>
 
     <div class="card">
-      <h2>📊 Staff Reports</h2>
+      <h2> Staff Reports</h2>
       <p>View attendance reports and download CSV files.</p>
       <a href="staffportal.html">Go to Reports →</a>
     </div>
