--- a/backend/src/main/resources/static/staffdashboard.html
+++ b/backend/src/main/resources/static/staffdashboard.html
@@ -20,6 +20,10 @@
       <button id="uploadRoster">Upload Roster</button>
       <button id="generateReport">Generate Report</button>
       <button id="manageSessions">Manage Sessions</button>
+      
+      <button id="checkinButton">Check In</button>
+<pre id="status"></pre>
+
     </div>
   </section>
 
