--- a/backend/src/main/resources/static/staffdashboard.html
+++ b/backend/src/main/resources/static/staffdashboard.html
@@ -18,7 +18,11 @@
     <div class="staff-buttons">
       <button id="createSession">Create Session</button>
       <button id="uploadRoster">Upload Roster</button>
-      <button id="generateReport">Generate Report</button>
+
+
+      <button id="generateReportButton">Generate Report (CSV)</button>
+<pre id="reportOutput"></pre>
+
       <button id="manageSessions">Manage Sessions</button>
       
       <button id="checkinButton">Check In</button>
