made some last minute changes

--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -115,11 +115,13 @@ header img {
       <p> Students can check into their class sessions securely.</p>
       <a href="studentcheckin.html">Go to Student Check-in →</a>
     </div>
-
+   <!--
     <div class="card">
       <h2> Staff Reports</h2>
       <p>View attendance reports and download CSV files.</p>
       <a href="staffportal.html">Go to Reports →</a>
+   This is a comment -->
+
     </div>
   </div>
 
