--- a/backend/src/main/resources/static/staffupload.html
+++ b/backend/src/main/resources/static/staffupload.html
@@ -8,10 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>Upload Student Roster</h1>
-    <p>Upload a CSV roster file for a specific session.</p>
+    <h1>Upload Student List</h1>
+    <p>Upload a CSV roster file for a class.</p>
   </header>
-
   <main>
     <form id="uploadRosterForm">
       <label>Session ID:</label>
@@ -20,12 +19,12 @@
       <label>Roster File (.csv):</label>
       <input type="file" id="rosterFile" accept=".csv" required />
 
-      <button type="submit">Upload Roster</button>
+      <button type="submit">Upload List</button>
     </form>
 
     <section id="result">
       <h3>Upload Result:</h3>
-      <pre id="output">No upload yet.</pre>
+      <pre id="output">No List uploaded  yet</pre>
     </section>
   </main>
 
