--- a/backend/src/main/resources/static/studentcheckin.html
+++ b/backend/src/main/resources/static/studentcheckin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Student Check-In</title>
-  <link rel="stylesheet" href="student.css" />
+  <link rel="stylesheet" href="studentcheckin.css" />
 </head>
 <body>
   <header>
@@ -35,6 +35,9 @@
   <footer>
     <p>&copy; 2025 Attendance Tracker – Group N</p>
   </footer>
+
+
+  <button onclick="document.location='index.html'">Return to Dashboard</button>
 
   <script src="scripts/studentcheckin.js"></script>
 </body>
