--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -96,7 +96,7 @@ header img {
 </head>
 <body>
   <header>
-    <!-- 🏫 University of Waikato Logo -->
+    <!--  University of Waikato Logo -->
     <img src="uni-waikato-red-logo.jpg" alt="University of Waikato Logo" />
 
     <h1>Attendance Tracker</h1>
