--- a/backend/src/main/resources/static/staffcreate.html
+++ b/backend/src/main/resources/static/staffcreate.html
@@ -26,7 +26,7 @@
       <label>End Time:</label>
       <input type="datetime-local" id="endTime" required />
 
-      <!-- 🔹 Geofence Section (Dropdown Only) -->
+      <!-- Geofence Section (Dropdown Only) -->
       <label>Choose Building Geofence:</label>
       <select id="geofenceSelect">
         <option value="">-- Select a Building --</option>
@@ -55,7 +55,7 @@
     </button>
   </footer>
 
-  <!-- ✅ Script at bottom so DOM is ready -->
+  <!--  Script at bottom so DOM is ready -->
   <script src="scripts/staffcreate.js"></script>
 </body>
 </html>
